<resources>
    <string name="app_name">Survey Client</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="server" translatable="false">http://46.0.193.227:8080/survey/client/</string>


    <string name="profile"><b>Profile</b></string>
    <string name="cancel">Cancel</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="top_surveys">Top Surveys</string>
    <string name="categories">Categories</string>
    <string name="completed_surveys">Completed Surveys</string>
    <string name="create_survey_string">Create Survey</string>
    <string name="enter_new_question">Please enter new Question</string>
    <string name="enter_new_answer">Please enter new answer</string>
    <string name="made_surveys">Made Surveys</string>
    <string name="new_profile_picture">Upload new profile picture</string>
    <string name="do_not_registered">Do not registered yet?</string>
    <string name="registration">Registration</string>
    <string name="fill_fields">Please fill in all the fields</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="Login">Login</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="Password">Password</string>
    <string name="ConnectionErrorList">Can\'t load surveys.\nConnection error</string>
    <string name="about_us">About us</string>
    <string name="all_surveys">All surveys</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="about_us_text" formatted="false"><![CDATA[
     <title>We\'re <b>independent</b> developers with no experience. </title><br/>
        This is our first so big project in team.<br/>
        Our team:<br/>
        <li>
            &#8226; Android developer:<br/>
                &#8194;&#8194;Pavel Kirilin<br/>
        </li>
        <li>
            &#8226; Server Developer:<br/>
                &#8194;&#8194;Pavel Gordeev<br/>
        </li>
        <li>
            &#8226; Site Developers:<br/>
            <li>
             &#8194;&#8194;&#8194;&#8194;&#8226;Kirill Posoha<br/>
            </li>
            <li>
             &#8194;&#8194;&#8194;&#8194;&#8226;Anastasia Jilina<br/>
            </li>
        </li>
        <li>
            &#8226;Database developer:<br/>
                    &#8194;&#8194;Maksim Jdamirov<br/>
        </li>
    ]]></string>
    <string name="name_of_survey">Enter the name of survey</string>
    <string name="succsessfullySent">Successfully sent to server</string>
    <string name="something_went_wrong">Something went wrong, try again later</string>
    <string name="please_wait">Please Wait....</string>
    <string name="registration_complete">Registration complete</string>
    <string name="picture_upload_error">Picture upload error</string>
    <string name="not_all_fields_filled">Not all fields are filled</string>
    <string name="password_dont_match">Passwords do not match</string>
    <string name="upload_to_server_error">Upload to server failed</string>
    <string name="logout_succ">Logout successfully</string>
    <string name="please_login_to_create">Please login to create a survey</string>
    <string name="please_login_to_profile">Please login to go to profile</string>
    <string name="welcome">"Welcome "</string>
    <string name="incorrect_login">Incorrect login</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="not_all_quest_ans">not all question is isAnswered</string>
    <string name="statistics">Statistics</string>
    <string name="takenSurveys">Taken Surveys</string>
    <string name="please_login_to_access">Please login to access to surveys</string>
    <string name="ConnectionErrorList2">Can\'t load categories.\nConnection error</string>
    <string name="login_owned">This login is already taken</string>
    <string name="surveys">Surveys</string>
    <string name="other">other</string>
    <string name="what_want_change">What would you like to change?</string>
    <string name="add_answers">Please add answers for this question</string>
    <string name="max_quantity_ans">Maximum quantity of answers is reached</string>
    <string name="max_quantity_ques">Maximum quantity of question is reached</string>
    <string name="enterAns">Please enter the answer</string>
    <string name="logout">logout</string>
    <string name="comment">Comment this survey</string>
    <string name="empty_comment">Please enter the comment</string>
    <string name="no_done_surveys">You\'ve not complete any survey yet</string>
    <string name="inSurveyComment">Comment:\n\t\t</string>
    <string name="empty_question">Please enter the question</string>
    <string name="next_answer">Next answer</string>
    <string name="prew_answer">Previous answer</string>
    <string name="survey_is_empty">The survey is empty</string>
    <string name="newest_surveys">Newest surveys</string>
    <string name="delete_profile_picture">Delete profile picture</string>
    <string name="profile_picture">Profile picture</string>
    <string name="takeSurveys">Take a survey</string>
    <string name="new_answer">new answer</string>
    <string name="new_question">new question</string>
    <string name="new_survey">new survey</string>
    <string name="what_want_do">What would you like to do?</string>
    <string name="change_question">Change Question</string>
    <string name="change_answer">Change Answer</string>
    <string name="add_answer">Add answer</string>
    <string name="delete_question">Delete question</string>
    <string name="delete_answer">Delete answer</string>
    <string name="delete_profile">Delete profile</string>
    <string name="delete_profile_succ">Profile deleted succsessfully</string>
    <string name="chooseCat">Choose category for your survey</string>
    <string name="made_by_text">Survey made by:</string>
    <string name="survey_already_complete">You already complete that survey</string>
    <string name="alert">Alert</string>
    <string name="save_new_answers">Save new answers</string>
    <string name="leave_old_answers">Watch statistic with old answers</string>
    <string name="done_surveys">Completed surveys</string>
    <string name="sure_deletePicture">Are you sure want to delete profile picture?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sure_deleteProfile">Are you sure want to delete profile?</string>
    <string name="no_made_surveys">You\'ve not made any survey yet</string>
    <string name="change_name">Change name</string>
    <string name="change_surname">Change surname</string>
    <string name="profile_icon_not_downloaded">Profile photo not downloaded</string>
    <string name="open_statistics_without_survey">Open statictics</string>
    <string name="survey_look">Your survey will look like this :</string>
    <string name="add_question">Add new Question</string>
    <string name="creation_complete">Survey creation complete</string>
    <string name="question">question</string>
    <string name="is_empty">is empty </string>
    <string name="answer">answer</string>
    <string name="in">in</string>
    <string name="commentSurvey">Do you want to comment that survey?</string>
    <string name="commentThisSurvey">Enter comment of this survey</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="orMissingAnswers">or missing answers</string>
    <string name="enter_new_name">Please enter new name</string>
    <string name="save">Save</string>
    <string name="enter_new_surname">Please enter new surname</string>
    <string name="question1">question</string>
    <string name="error_saving_user">Error saving user</string>
    <string name="chooseAct">Choose action</string>
    <string name="open_in_fullscreen">Open picture in fullscreen</string>
    <string name="your_answer">Your answer is \"\ </string>
    <string name="short_password">Password length must be greater than 6 and less than 32 characters</string>
    <string name="short_login">Login length must be greater than 6 and less than 32 characters</string>
    <string name="oops_exeption">Thanks you for your help. We got a report and we gonna fix it soon.</string>
    <string name="close_app">Close that app.</string>
    <string name="sorry">Sorry...</string>
    <string name="report">Send report</string>
    <string name="app_has_crash">Oooops... App has crash.</string>
    <string name="error_sending_report">Error sending report</string>
</resources>
