<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="surveys">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/top100"
                    android:icon="@drawable/top100"
                    android:title="@string/top_surveys" />
                <item
                    android:id="@+id/category"
                    android:icon="@drawable/categories"
                    android:title="@string/categories" />
                <item
                    android:id="@+id/createSurvey"
                    android:icon="@drawable/create_survey"
                    android:title="@string/create_survey_string" />
                <item
                    android:id="@+id/newestSurveys"
                    android:icon="@drawable/newest_surveys"
                    android:title="Newest surveys"
                    />
            </group>
        </menu>
    </item>
    <item android:title="other">
        <menu>
            <group>
                <item
                    android:id="@+id/login"
                    android:icon="@drawable/login_icon"
                    android:title="@string/login" />
                <item
                    android:id="@+id/aboutUs"
                    android:icon="@drawable/info_icon"
                    android:title="@string/about_us" />
            </group>
        </menu>
    </item>
</menu>
