<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/newQuestionRowlayout">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/new_question"
    android:id="@+id/newQuestionText"
    android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newQuestionText"
        android:id="@+id/newAnswerLinear"
        android:orientation="vertical">
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addAnswer"
        android:layout_below="@id/newAnswerLinear"
        android:layout_marginTop="10dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/add_answer"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteQuestion"
        android:layout_below="@id/addAnswer"
        android:layout_marginTop="10dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/delete_question"
        />

</RelativeLayout>