<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="57dp"
    tools:context="com.example.s3rius.surveyclient.fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="124dp"
                android:layout_marginTop="3dp"
                android:layout_height="124dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/no_image"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp" />

            <TextView

                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_toRightOf="@id/profile_pic"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/profile_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_name"
                android:layout_marginTop="7dp"
                android:layout_toRightOf="@id/profile_pic"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/newPhoto"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/profile_pic"
                android:layout_marginTop="25dp"
                android:layout_toRightOf="@id/profile_pic"
                android:onClick="uploadNewProfilePhoto"
                android:text="@string/new_profile_picture" />

            <Button
                android:id="@+id/completed_surveys_prof"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newPhoto"
                android:layout_marginTop="7dp"
                android:text="@string/completed_surveys" />

            <Button
                android:id="@+id/made_surveys"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/completed_surveys_prof"
                android:layout_marginTop="7dp"
                android:text="@string/made_surveys" />

            <Button
                android:id="@+id/delete_profile_pic"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/made_surveys"
                android:layout_marginTop="10dp"
                android:onClick="deleteProfilePicture"
                android:text="@string/delete_profile_picture" />

            <Button
                android:id="@+id/delete_profile"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delete_profile_pic"
                android:layout_marginTop="10dp"
                android:onClick="deleteProfile"
                android:text="@string/delete_profile" />

            <Button
                android:id="@+id/changeName"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/delete_profile"
                android:layout_marginTop="10dp"
                android:text="@string/change_name" />

            <Button
                android:id="@+id/changeSurname"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/changeName"
                android:layout_marginTop="10dp"
                android:text="@string/change_surname" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
