<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/surveyRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.s3rius.surveyclient.fragments.SurveyCreatorFragments.CreateSurveyReborn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/surveyLookText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_look"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newQuestionLinear"
                android:layout_below="@id/surveyLookText"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:id="@+id/addQuestion"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newQuestionLinear"
                android:layout_marginTop="5dp"
                android:text="@string/add_question" />
            <Button
                android:id="@+id/creationComplete"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addQuestion"
                android:layout_marginTop="5dp"
                android:text="@string/creation_complete" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
