<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.s3rius.surveyclient.fragments.LoginFragment">

    <EditText
        android:id="@+id/passpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginlogin"
        android:layout_alignStart="@+id/loginlogin"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/loginlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignStart="@+id/passpass"
        android:onClick="OnclickLogin"
        android:text="@string/login" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loginlogin"
        android:layout_below="@+id/passpass"
        android:layout_marginTop="80dp"
        android:onClick="OnclickCancelOnLogin"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="Do not registered yet? I don't give a fuc" />

</RelativeLayout>
